# fig

./: '  .gitignore  CMakeLists.txt  README.txt  \  imgui.ini
Resources/Shaders/: Fragment.fs  UnicolorVertex.vs  Vertex.vs
imgui/backends/: imgui_impl_opengl3.h  imgui_impl_sdl3.cpp  imgui_impl_x11.cpp  imgui_impl_x11.h
old_src/: Application.h  Ui.cpp  main.cpp
old_src/Engine/Fig_Engine/: Engine.h
old_src/Fig/Fig_Fig/: Tree.h
old_src/Render/Fig_Render/: Renderer.h
old_src/Windows/Fig_Windows/: IWindow.h
old_src/Windows/Fig_Windows/RootWindow/: LinuxRootWindow.cpp
scripts/: cmake.sh  cmakeClean.sh
src/: Application.cpp  Application.h  CMakeLists.txt  EulerMaruyama.cpp  EulerMaruyama.h  Fig.h  Particle2D.h  Simulation.cpp  Simulation.h  System.cpp  System.h  Ui.cpp  Ui.h  main.cpp
src/Core/: Application.cpp  Application.h  CMakeLists.txt  Events.h  Layer.cpp  Layer.h
src/Core/ECS/: CMakeLists.txt
src/Core/ECS/Core_ECS/: ComponentPool.h  Dummy.cpp  Registry.h  SortedComponentPool.h  SortedRegistry.h
src/Core/Graphics/: CMakeLists.txt
src/Core/Graphics/Core_Graphics/: Camera.cpp  Camera.h  GraphicsComponents.h  Model.cpp  Model.h  RenderDevice.cpp  RenderDevice.h  Shader.h  ShaderProgram.cpp  ShaderProgram.h  TODO.txt  tempGLDevice.cpp
src/Core/Graphics/Core_Graphics/gl/: GLRenderDevice.cpp  GLRenderDevice.h  GLShader.cpp  GLShader.h  GLShaderProgram.cpp  GLShaderProgram.h  OpenGL.cpp  OpenGL.h
src/Core/ImGui/: CMakeLists.txt
src/Core/ImGui/Core_ImGui/: ImGuiContainer.cpp  ImGuiContainer.h  ImGuiContainerTEMP.h  ImGuiPropertyEditor.cpp  ImGuiPropertyEditor.h
src/Core/UI/: CMakeLists.txt
src/Core/UI/Core_UI/: Gui.cpp  Gui.h
src/Core/Utils/: CMakeLists.txt
src/Core/Utils/Core_Utils/: Concepts.h  Flags.h  Spherical.h  Types.h
src/Core/Utils/Core_Utils/Linear/: Matrix.h  MatrixTransform.cpp  MatrixTransform.h  Vector.h
src/Core/Window/: CMakeLists.txt
src/Core/Window/Core_Window/: LinuxWindow.cpp  LinuxWindow.h  Window.cpp  Window.h
src/Engine/: CMakeLists.txt
src/Fig/: CMakeLists.txt  CameraRotateLayer.cpp  CameraRotateLayer.h  GuiTestLayer.cpp  GuiTestLayer.h  MainMenuLayer.cpp  MainMenuLayer.h  OverlayLayer.cpp  OverlayLayer.h  SquareLayer.cpp  SquareLayer.h  TempLayer.cpp  TestLayer.cpp  TestLayer.h  TestLayer2.cpp  TestLayer2.h  TestPrintLayer.cpp  TestPrintLayer.h  UncaughtEventsOutputLayer.cpp  UncaughtEventsOutputLayer.h  UnderLayer.cpp  UnderLayer.h  VectorTestLayer.cpp  VectorTestLayer.h  main.cpp
src/Fig/Components/: PositionComponent.h
src/Fig/Fig_Fig/: Events.h  Fig.h  Utils.h
src/Platform/: CMakeLists.txt  IWindow.h  LinuxPlatform.cpp  LinuxPlatform.h  Platform.h
src/Platform/Fig_Platform/: LinuxPlatform.cpp  LinuxPlatform.h  OSXPlatform.cpp  Platform.h
src/Render/: CMakeLists.txt  Renderer.h
src/Render/Fig_Render/: Renderer.cpp  Renderer.h
src/Windows/: CMakeLists.txt
src/Windows/Fig_Windows/: IWindow.h  LinuxRootWindow.h  Window.h
src/Windows/Fig_Windows/RootWindow/: LinuxRootWindow.h
test/: CMakeLists.txt  Particle2D_test.cpp  test.cpp
test/Core/: CMakeLists.txt
test/Core/ECS/: CMakeLists.txt  SortedComponentPool.cpp
